# strands-agent-azure-openai-demos

./: CLAUDE.md  README.md  azure_example.py  example_usage.py  file_system.py  openai_agent.py  pyproject.toml  requirements.txt
repl_state/: repl_state.pkl
