[tool.poetry]
package-mode = false

[project]
name = "strands-agent-openai-demo"
version = "0.1.0"
description = ""
authors = [{ name = "Henry Skiba", email = "henry.skiba@frgrisk.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["strands-agents[openai] (>=1.1.0,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
